package fr.insarouen.asi.diplo.MoteurJeu;


public class Moteur{
	public Moteur(){

	}
}
